--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "laravel-mix": "^2.0",
         "vue": "^2.5.7",
         "vue-router": "^3.0.1"
+    },
+    "dependencies": {
+        "vuex": "^3.0.1"
     }
 }
