--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/Vue-App.js": "/js/Vue-App.js",
+    "/js/app-custom.js": "/js/app-custom.js",
     "/css/Vue-App.css": "/css/Vue-App.css"
 }
