--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "vue-router": "^3.0.1"
     },
     "dependencies": {
-        "vuex": "^3.0.1"
+        "luxon": "^1.8.0",
+        "vue-datetime": "^1.0.0-beta.8",
+        "vuex": "^3.0.1",
+        "weekstart": "^1.0.0"
     }
 }
