--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "moment": "^2.22.2",
         "numeral": "^2.0.6",
         "vue-datetime": "^1.0.0-beta.8",
+        "vue-sweetalert2": "^1.6.4",
         "vuex": "^3.0.1",
         "weekstart": "^1.0.0"
     }
