--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "luxon": "^1.8.0",
         "moment": "^2.22.2",
         "numeral": "^2.0.6",
+        "vue-cleave": "^1.2.2",
         "vue-datetime": "^1.0.0-beta.8",
         "vue-sweetalert2": "^1.6.4",
         "vuex": "^3.0.1",
