--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "vue": "^2.5.7",
+        "vue-multiselect": "^2.1.3",
         "vue-router": "^3.0.1"
     },
     "dependencies": {
