--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "numeral": "^2.0.6",
         "vue-cleave": "^1.2.2",
         "vue-datetime": "^1.0.0-beta.8",
+        "vue-good-table": "^2.16.2",
         "vue-sweetalert2": "^1.6.4",
         "vuex": "^3.0.1",
         "weekstart": "^1.0.0"
